--- a/Ono Sendai Homepage/homepage.html
+++ b/Ono Sendai Homepage/homepage.html
@@ -72,7 +72,6 @@
 					<li><a href='https://skidrowgames.net/' target='_blank'>Skidrow</a></li>
 					<li><a href='http://forum.tntvillage.scambioetico.org/index.php?act=Login&CODE=00' target='_blank'>TNT Village</a></li>
 					<li><a href='https://1337x.to/', target='_blank'>l337x</a></li>
-			
 				</ul>
 			</div>
 			
@@ -99,7 +98,8 @@
 		<div class='googles'>
 			<p><a href='https://drive.google.com' target='_blank'>Google Drive</a></p>
 			<p><a href='https://mail.google.com' target='_blank'>Gmail</a></p>
-			<p><a href='https://developers.google.com' target='_blank'>Google Developers</a></p>
+			<p><a href='https://www.dropbox.com' target='_blank'>Dropbox</a></p>
+			<p><a href='https://www.dropbox.com' target='_blank'>Dropbox</a></p>
 		</div>
 		
 		<form method="get" action="https://www.google.com/search"> 
