--- a/Ono Sendai Homepage/homepage.html
+++ b/Ono Sendai Homepage/homepage.html
@@ -45,6 +45,7 @@ var search=[ // Search engines
     ["!u",  "http://www.urbandictionary.com/define.php?term="],     // Urban Dictionary
     ["!w",  "http://it.wikipedia.org/w/index.php?search="],         // Wikipedia
     ["!y",  "https://www.youtube.com/results?search_query="],       // YouTube
+	["!y",  "https://www.youtube.com/results?search_query="],       // D20
 ];
 
 var i,ss="";
@@ -106,13 +107,15 @@ function preview(c,x) {
 				<p>/Magazines</p>
 				<ul>
 					<li><a href='https://huffingtonpost.it/' target='_blank'>Huffington Post</a></li>
-					<li><a href='https://www.mangaeden.com/it/' target='_blank'>MangaEden</a></li>
-					<li><a href='https://www.zerocalcare.it/' target='_blank'>ZeroCalcare</a></li>
-					<li><a href='https://www.delicatessen666.blogspot.it/?zx=1d86f903e9c8a98c' target='_blank'>Delicatessen</a></li>
 					<li><a href='https://bagniproeliator.it' target='_blank'>Bagni Proeliator</a></li>
 					<li><a href='https://incomaemeglio.blogspot.com/' target='_blank'>InComaèMeglio</a></li>
+					<li><a href='https://docmanhattan.blogspot.com/' target='_blank'>Doc.Manhattan</a></li>
+					<li><a href='https://www.zerocalcare.it/' target='_blank'>ZeroCalcare</a></li>
 					<li><a href='https://www.awwwards.com' target='_blank'>Awwwards</a></li>
+					<li><a href='https://www.delicatessen666.blogspot.it/?zx=1d86f903e9c8a98c' target='_blank'>Delicatessen</a></li>
 					<li><a href='https://leganerd.com/' target='_blank'>Lega Nerd</a></li>
+					<li><a href='https://www.mangaeden.com/it/' target='_blank'>MangaEden</a></li>
+					<li><a href='https://www.reddit.com/' target='_blank'>Reddit</a></li>
 					<li><a href='https://Wired.it' target='_blank'>Wired</a></li>
 					<li><a href='https://vice.com/it/' target='_blank'>Vice</a></li>
 				</ul>
@@ -123,6 +126,7 @@ function preview(c,x) {
 				<ul>
 					<li><a href='https://www.piratestreaming.watch/' target='_blank'>Pirate Streaming</a></li>
 					<li><a href='https://www.piratestreaming.info/' target='_blank'>Pirate Stream </a></li>
+					<li><a href='https://www.netflix.com/it/' target='_blank'>Netflix</a></li>
 					<li><a href='https://www.soundcloud.com' target='_blank'>SoundCloud</a></li>
 					<li><a href='https://www.weebcrew.moe/' target='_blank'>Weebcrew</a></li>
 					<li><a href='https://www.youtube.com' target='_blank'>YouTube</a></li>
@@ -159,6 +163,7 @@ function preview(c,x) {
 					<li><a href='http://www.superfreedraw.com' target='_blank'>Superfreedraw</a></li>
 					<li><a href='https://www.deviantart.com' target='_blank'>DeviantArt</a></li>
 					<li><a href='https://www.codecademy.com/' target='_blank'>Codecademy</a></li>
+					<li><a href='https://codepen.io/' target='_blank'>CodePen</a></li>
 				</ul>
 			</div>
 			
@@ -168,11 +173,13 @@ function preview(c,x) {
 					<li><a href='https://proxtpb.art/', target='_blank'>The Pirate Bay</a></li>
 					<li><a href='https://ilcorsaronero.me', target='_blank'>ilCorSaRoNeRo</a></li>
 					<li><a href='http://forum.tntvillage.scambioetico.org/index.php?act=Login&CODE=00' target='_blank'>TNT Village</a></li>
-					<li><a href='https://rarbg.to/index8.php' target='_blank'>Rar.bg </a></li>
+					<li><a href='chrome-extension://cdfkaloficjmdjbgmckaddgfcghgidei/tab.html#/' target='_blank'>DuckieTv</a></li>
 					<li><a href='https://skidrowgames.net' target='_blank'>Skidrow</a></li>
+					<li><a href='https://rarbg.to/index8.php' target='_blank'>Rar.bg </a></li>
 					<li><a href='https://1337x.to', target='_blank'>1337x</a></li>
 					<li><a href='https://yts.am/', target='_blank'>Yts</a></li>
 					<li><a href='https://boards.4chan.org/t/catalog' target='_blank'>/t/</a></li>
+					
 				</ul>
 			</div>
 			
@@ -196,12 +203,14 @@ function preview(c,x) {
 		</div>
      <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
 	  <script  src="./script.js"></script>
-	  
+	  </br></br>
 		<div class='googles'>
-			<p><a href='https://drive.google.com' target='_blank'>Google Drive</a></p>
+			<p><a href='https://www.youtube.com' target='_blank'>Youtube</a></p>
+			<p><a href='https://www.facebook.com' target='_blank'>Facebook</a></p>
 			<p><a href='https://mail.google.com' target='_blank'>Gmail</a></p>
-			<p><a href='https://www.dropbox.com' target='_blank'>Dropbox</a></p>
-			<p><a href='https://www.dropbox.com' target='_blank'>Dropbox</a></p>
+			<p><a href='https://drive.google.com' target='_blank'>Drive</a></p>
+			
+			
 		</div>
 		
 		
